--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,38 +1,144 @@
-.header {
-    height: 80px;
-    border-color: #777777;
+/* general content */
+body {
+    color: #777;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    font-size: 20px;
+    line-height: 30px;
+    background: url("../images/background.png")
 }
 
+#header {
+    position: fixed;
+    z-index: 99;
+    width: 100%;
+    color: #fff;
+    margin: 0 auto;
+    background: #fff;
+    border-bottom: solid 2px #ccc;
+    height: 100px;
+}
+
+nav {
+    float: right;
+    margin-top: 25px;
+
+}
+
+.container{
+    width: 100%;
+    margin: 0 auto;
+    max-width: 960px;
+    clear: both;
+}
 
 #name {
     float: left;
     background-color: #4aaaa5;
-    font-family: 'Georgia', Times, Times New Roman, serif;
+    font-size: 30px;
+    font-weight: 500;
+    line-height: 100px;
+    font-family: 'Georgia', Times, 'Times New Roman', serif;
     color: #ffffff;
+    text-align: center;
     padding-left: 20px;
     padding-right: 20px;
-    margin-left: 220px
 }
 
-#navBar {
-    float: right;
-    margin-top: 30px;
-    margin-right: 200px;
-}
-
-.nav {
+.main-content {
+    float: left;
+    width: 100%;
+    max-width: 960px;
     padding: 30px;
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    color: #777777
+    background: #fff;
+    margin: 0 0 40px;
+    border: 1px solid;
 }
 
-#content {
-    height: 650px;
-    background-image: url("background.png");
+/* footer */
+
+footer {
+    font-size: 15px;
+    color: #fff;
+    background: #666;
+    border-top: 10px solid #4aaaa5;
+    text-align: center;
+    padding: 30px 0;
+    height: 30px;
+    clear: both;
 }
 
-#aboutMe {
-    width: 960px;
-    height: 500px;
-    background-color: #ffffff;
+/* portfolio page */
+
+.myWork {
+    position: relative;
+    float: left;
+    width: 250px;
+    margin: 25px 0 25px;
+    overflow: auto; 
+}
+
+.myWork img {
+    width: 100%;
+    border: 0 none;
+    opacity: 0.8;
+    margin: 15px;
+}
+
+.myWork h3 {
+    position: absolute;
+    padding: 15px;
+    bottom: 15px;
+    width: 100%;
+    margin-bottom: 0;
+    text-align: center;
+    font-weight: 300;
+    line-height: 25px;
+    color: #fff;
+    background: #4aaaa5;
+    font-size: 15px;
+    margin: 15px;
+}
+
+/* contact page */
+
+#contact ul {
+    margin-bottom: 15px;
+}
+
+#contact li {
+    margin-bottom: 10px;
+}
+
+#list {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+label,
+input[type=text],
+input[type=email],
+textarea {
+    display: block;
+    width: 100%;
+}
+
+input[type=text],
+input[type=email],
+textarea {
+    height: 30px;
+    padding: 0 10px;
+    border: 2px solid #ddd;
+}
+
+textarea {
+    height: 250px;
+}
+
+input[type=submit] {
+    font-size: 10px;
+    color: #fff;
+    background: #4aaaa5;
+    border: 0 none;
+    padding: 15px 25px;
 }
