--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-/* general content */
+/* general content*/
 body {
     color: #777;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
@@ -15,7 +15,12 @@ body {
     margin: 0 auto;
     background: #fff;
     border-bottom: solid 2px #ccc;
-    height: 100px;
+    height: 80px;
+}
+
+a {
+    text-decoration: none;
+    height: 80px;
 }
 
 nav {
@@ -24,11 +29,25 @@ nav {
 
 }
 
+nav a {
+    display: inline-block;
+    margin-left: 15px;
+    padding-left: 15px;
+    line-height: 20px;
+    text-decoration: none;
+}
+
 .container{
     width: 100%;
     margin: 0 auto;
     max-width: 960px;
     clear: both;
+}
+
+h1 {
+    border-bottom: solid 2px #ccc; 
+    padding: 10px;
+    color: #4aaaa5;
 }
 
 #name {
